--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_RESUME_LINK=https://drive.google.com/file/d/11vQi12XEAWdsnnAsvtm6RmfLdrmdJmwq/view?usp=share_link
+REACT_APP_RESUME_LINK='./src/image/SagarBharvadiyaResume.pdf'
