--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-REACT_APP_RESUME_LINK='./src/image/SagarBharvadiyaResume.pdf'
+# REACT_APP_RESUME_LINK='./src/image/SagarBharvadiyaResume.pdf'
+
+YOUR_TEMPLATE_ID= template_echkeug
+
+YOUR_SERVICE_ID= service_q8aitnb
+
+YOUR_KEY_ID= wmdInJSGadcXUjwDA
