--- a/.env
+++ b/.env
@@ -1,7 +1,4 @@
-# REACT_APP_RESUME_LINK='./src/image/SagarBharvadiyaResume.pdf'
-
-YOUR_TEMPLATE_ID= template_echkeug
-
-YOUR_SERVICE_ID= service_q8aitnb
-
-YOUR_KEY_ID= wmdInJSGadcXUjwDA
+# REACT_APP_RESUME_LINK=./src/image/SagarBharvadiyaResume.pdf
+REACT_APP_TEMPLATE_ID=template_echkeug
+REACT_APP_SERVICE_ID=service_q8aitnb
+REACT_APP_KEY_ID=wmdInJSGadcXUjwDA
